<resources>
    <string name="app_name">騰訊QQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="addfriend">添加好友</string>
    <string name="addgroup">添加群組</string>
    <string name="scan">扫一扫</string>
    <string name="customerservice">客服</string>
    <string name="qq_name">QQ昵称</string>
    <string name="sign_static">这个人很帅不留个性签名</string>
    <string name="register_adress">家庭地址:</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reply">评论</string>
    <string name="Gallery">图片集</string>

    <string name="battery_capacity">剩余电量 : </string>
    <string name="battery_status">电池状态 : </string>
    <string name="remaining_battery">剩余电量(百分比) : </string>
    <string name="current_now">瞬时电流 : </string>
    <string name="battery_temperature">电池温度 : </string>
    <string name="battery_voltage">电压 : </string>
    <string name="battery_total_energy">电池出厂容量 : </string>
    <string name="space">动态</string>
    <string name="gallery">图片集</string>
    <string name="battery">电池信息</string>
</resources>
