<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TrendsBatteryInfoActivity"
    android:orientation="vertical"
    android:background="@color/lavender">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <TableLayout
        android:padding="@dimen/dp_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
        <TableRow
            android:background="@color/auqamarin">

            <TextView
                android:id="@+id/battery_capacity"
                android:layout_height="30dp"
                android:layout_weight="4"
                android:gravity="right|center_vertical"
                android:text="@string/battery_capacity" />
            <TextView android:id="@+id/battery_capacity_value"
                android:gravity="center_vertical"
                android:text="Battery Capacity 78"
                android:layout_weight="6"
                android:layout_height="30dp"/>
            <TextView android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:background="@color/lightSteelBlue">
            <TextView android:id="@+id/battery_status"
                android:text="@string/battery_status"
                android:layout_weight="4"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"/>
            <TextView android:id="@+id/battery_status_value"
                android:text="battery_status"
                android:layout_weight="6"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:background="@color/auqamarin">
            <TextView android:id="@+id/remaining_battery"
                android:text="@string/remaining_battery"
                android:layout_weight="4"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"/>
            <TextView android:id="@+id/remaining_battery_value"
                android:text="remaining_battery"
                android:layout_weight="6"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:background="@color/lightSteelBlue">
            <TextView android:id="@+id/current_now"
                android:text="@string/current_now"
                android:layout_weight="4"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"/>
            <TextView android:id="@+id/current_now_value"
                android:text="current_now"
                android:layout_weight="6"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:background="@color/auqamarin">
            <TextView android:id="@+id/battery_temperature"
                android:text="@string/battery_temperature"
                android:layout_weight="4"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"/>
            <TextView android:id="@+id/battery_temperature_value"
                android:text="battery_temperature"
                android:layout_weight="6"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:background="@color/lightSteelBlue">
            <TextView android:id="@+id/battery_voltage"
                android:text="@string/battery_voltage"
                android:layout_weight="4"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"/>
            <TextView android:id="@+id/battery_voltage_value"
                android:text="battery_voltage"
                android:layout_weight="6"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:background="@color/auqamarin">
            <TextView android:id="@+id/battery_total_energy"
                android:text="@string/battery_total_energy"
                android:layout_weight="4"
                android:layout_height="30dp"
                android:gravity="right|center_vertical"/>
            <TextView android:id="@+id/battery_total_energy_value"
                android:text="battery_voltage"
                android:layout_weight="6"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

</LinearLayout>